Fix gallery spacing

--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,6 @@ table.styled tr th, table.styled tr td {border: 1px solid #555; padding: 0.2em 0
 
 /* Galleries */
 #gallery, #caption {width: 100%;}
-#gallery {margin-top: -2.65em;}
 #gallery .screenshot {height: calc(75vh/16*10); background-position: center; background-size: cover; border: 5px solid #444; transition: 1s;}
 #pause {display: inline; position: relative; top: 2.4em; left: 5px; background: #222; padding: 1ex 1.4ex; cursor: pointer; font-size: 1.5em; border: 3px solid #333;}
 
